--- a/css/index.css
+++ b/css/index.css
@@ -134,7 +134,7 @@ table, caption, tbody, tfoot, thead, tr, th, td {
 .search{
 	width: 4rem;
 	position: absolute;
-	top:-0.67rem;
+	bottom:3.3rem;
 	right: 1.2rem;
 }
 .search input{
