--- a/css/OrderDetails.css
+++ b/css/OrderDetails.css
@@ -42,6 +42,9 @@ html, body, div, span, applet, object, iframe,
 	  -webkit-text-stroke-width: 0.2px;
 	  -moz-osx-font-smoothing: grayscale;
 }
+a{
+  -webkit-tap-highlight-color:transparent !important
+}
 		header{
 			width: 6.4rem;
 		}
