--- a/css/SuccessfulPayment.css
+++ b/css/SuccessfulPayment.css
@@ -42,6 +42,9 @@
     -webkit-text-stroke-width: 0.2px;
     -moz-osx-font-smoothing: grayscale;
 }
+a{
+  -webkit-tap-highlight-color:transparent !important
+}
     header{
       width: 6.4rem;
     }
