--- a/css/resuit.css
+++ b/css/resuit.css
@@ -31,6 +31,9 @@ table, caption, tbody, tfoot, thead, tr, th, td {
 	  -webkit-text-stroke-width: 0.2px;
 	  -moz-osx-font-smoothing: grayscale;
 }
+a{
+  -webkit-tap-highlight-color:transparent !important
+}
 header{
 	width: 6.4rem;
 	background-color: #50bbdb;
@@ -233,6 +236,10 @@ header div span{
 	line-height: 0.64rem;
 	padding-top: 0.04rem;
 	padding-left: 0.61rem;
+}
+.city-down-a>div button img{
+	width: 0.42rem;
+	height: 0.33rem;
 }
 .city-down-a>div button{
 	width: 0.42rem;
