--- a/css/indexOne.css
+++ b/css/indexOne.css
@@ -182,6 +182,7 @@ a{
 	background-image: url('../images/jing_07.png');
 	background-repeat: no-repeat;
 	background-position: -0.01rem 0.09rem;
+	background-size: 0.93rem 0.13rem;
 	font-size: 0.28rem;
 	line-height: 0.3rem;
 	width: 0.93rem;
