--- a/css/OrderFilling.css
+++ b/css/OrderFilling.css
@@ -124,7 +124,7 @@
 			text-decoration: none;
 			line-height: .27rem;
 			height: .27rem;
-			border: .01rem solid #ccc;
+			border: 1px solid #ccc;
 			color: #6fc1cd;
 			text-align: center;
 		}
@@ -153,7 +153,7 @@
 			outline: none;
 			height: .27rem;
 			margin-top: .07rem;
-			border: .01rem solid #ccc;
+			border: 1px solid #ccc;
 			text-align: center;
 		}
 		.splice{
